<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">手机安全卫士</string>
    <string name="action_settings">Settings</string>
    <string name="main_title">全山手机卫士</string>
    <string name="login_name_hint">请输入用户名</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="login_password_confirm_hint">请确认密码</string>
    <string name="login_first_register">注册登录</string>
    <string name="login_first_login">登    录</string>
    <string name="login_error">用户名或密码错误</string>
    <string name="register_error">两次输入的密码不一致</string>
    <string name="setupone_title">1.欢迎使用手机防盗</string>
    <string name="setupone_context_hint">您的手机防盗卫士：</string>
    <string name="setupone_context_text1">Sim卡变更报警</string>
    <string name="setupone_context_text2">GPS追踪</string>
    <string name="setupone_context_text3">远程销毁数据</string>
    <string name="setupone_context_text4">远程锁屏</string>
    <string name="setupone_hint">提示：远程操作需要系统权限</string>
    <string name="setupone_power_on">点击取消授权</string>
    <string name="setupone_power_off">点击授权</string>
    <string name="setuptwo_title">2.手机卡的绑定</string>
    <string name="setuptwo_context_hint">提示：一旦sim卡绑定，下次重启手机如果sim卡发生改变,就发送报警短信到安全号码上。</string>
    <string name="setuptwo_text">点击绑定SIM卡：</string>
    <string name="setuptwo_text1">点击取消SIM卡绑定：</string>
    <string name="setuptwo_text2">设置安全号码：</string>
    <string name="setuptwo_edit_hint">输入或选择一个安全号码</string>
    <string name="setuptwo_button_text">选择联系人</string>
    <string name="setupthree_title">3.开启手机防盗</string>
    <string name="setupthree_context_hint">强烈建议您开启手机防盗，这样能更有效地保护您的手机及数据安全</string>
    <string name="setupthree_text">点击开启手机防盗：</string>
    <string name="setupthree_text1">点击关闭手机防盗：</string>
    <string name="setupfour_title">4.手机防盗模块控制</string>
    <string name="setupfour_context_hint">强烈建议您隐藏手机防盗模块，这样能更有效地保护您的手机及数据安全，隐藏后您可以通过拨打指令号码重新进入。</string>
    <string name="setupfour_text">点击隐藏防盗模块：</string>
    <string name="setupfour_text1">点击显示防盗模块：</string>
    <string name="setupresult_title">手机防盗</string>
    <string name="setupresult_safenumber">安全号码为：</string>
    <string name="setupresult_state_on">防盗保护已经开启</string>
    <string name="setupresult_state_off">防盗保护已经关闭</string>
    <string name="setupresult_moudle_off">防盗模块已经隐藏</string>
    <string name="setupresult_moudle_on">防盗模块已经显示</string>
    <string name="setupresult_command_hint">#*location*#   获取手机位置\n#*delete*#   恢复出厂设置\n#*lockscreen*#   锁定手机屏幕
        \n#*alarm*#   发出警报音乐</string>
    <string name="hightools_title">高级工具</string>
    <string name="hightools_addip">添加IP</string>
    <string name="hightools_query_sourcenum">号码归属地查询</string>
    <string name="hightools_number_usual">常用号码查询</string>
    <string name="hightools_message_backup">短信备份</string>
    <string name="hightools_message_restore">短信还原</string>
    <string name="hightools_app_lock">程序锁</string>
    <string name="settings_title">设置中心</string>
    <string name="settings_isauto_update">是否开启自动更新</string>
    <string name="settings_state_on">已开启</string>
    <string name="settings_state_off">已关闭</string>
    <string name="settings_isauto_ip">是否开启IP拨号</string>
    <string name="settings_address_open">是否开启归属地服务</string>
    <string name="settings_intecpter_open">是否开启拦截服务</string>
    
    <string name="communicate_call_history">电话拦截</string>
    <string name="communicate_message_history">短信拦截</string>
    <string name="communicate_blacknum_history">黑名单</string>
    <string name="communicate_blacknum_from_call">从通话记录添加</string>
    <string name="communicate_blacknum_from_msglist">从短信列表添加</string>
    <string name="communicate_blacknum_from_contacts">从通讯录添加</string>
    <string name="communicate_blacknum_from_custom">手动添加</string>
    <string name="communicate_blacknum_lookup">查看黑名单</string>
    
    <string name="lockscreen_access_pattern_start">"开始绘制图案"</string>
    <string name="lockscreen_access_pattern_cleared">"图案已清除"</string>
    <string name="lockscreen_access_pattern_cell_added">"已添加单元格"</string>
    <string name="lockscreen_access_pattern_detected">"图案绘制完成"</string>
    <string name="lockpattern_retry_button_text">"重试"</string>
    <string name="lockpattern_continue_button_text">"继续"</string>
    <string name="lockpattern_confirm_button_text">"确认"</string>
    <string name="lockpattern_recording_intro_header">"绘制解锁图案"</string>
    <string name="lockpattern_settings_help_how_to_record">"如何绘制解锁图案"</string>
    <string name="lockpattern_recording_incorrect_too_short">"至少连接4个点，请重试"</string>
    <string name="lockpattern_pattern_entered_header">"图案已记录"</string>
    <string name="lockpattern_need_to_confirm">"请再次绘制解锁图案"</string>
    <string name="lockpattern_need_to_unlock_wrong">"与上次输入不一致，请重试"</string>
    <string name="lockpattern_pattern_confirmed_header">"确认保存新解锁图案"</string>
    <string name="lockpattern_recording_inprogress">"完成后松开手指"</string>
    <string name="gesture_password_guide_text">你可以创建一个解锁图案，这样他人在借用你的手机时，将无法打开应用。</string>
    <string name="gesture_password_guide_creat_btn">创建手势密码</string>

</resources>