<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <TextView
        android:id="@+id/setupone_title"
        style="@style/setup_title_style"
        android:text="@string/setupone_title" >
    </TextView>

    <TextView
        android:id="@+id/on_line"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@id/setupone_title"
        android:background="@android:color/darker_gray" >
    </TextView>

    <TextView
        android:id="@+id/setup_context_hint"
        style="@style/setup_context_style"
        android:layout_below="@id/on_line"
        android:layout_marginTop="10dip"
        android:text="@string/setupone_context_hint" />

    <LinearLayout
        android:id="@+id/linearlayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setup_context_hint"
        android:orientation="horizontal" >

        <ImageView style="@style/setup_imagestar_style" />

        <TextView
            style="@style/setup_context_style"
            android:layout_gravity="center"
            android:text="@string/setupone_context_text1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout1"
        android:orientation="horizontal" >

        <ImageView style="@style/setup_imagestar_style" />

        <TextView
            style="@style/setup_context_style"
            android:layout_gravity="center"
            android:text="@string/setupone_context_text2" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout2"
        android:orientation="horizontal" >

        <ImageView style="@style/setup_imagestar_style" />

        <TextView
            style="@style/setup_context_style"
            android:layout_gravity="center"
            android:text="@string/setupone_context_text3" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearlayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearlayout3"
        android:orientation="horizontal" >

        <ImageView style="@style/setup_imagestar_style" />

        <TextView
            style="@style/setup_context_style"
            android:layout_gravity="center"
            android:text="@string/setupone_context_text4" />
    </LinearLayout>

    <TextView
        android:id="@+id/hint"
        style="@style/setup_context_style"
        android:layout_below="@+id/linearlayout4"
        android:layout_gravity="center"
        android:layout_marginTop="25dip"
        android:text="@string/setupone_hint" />
    
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/hint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:onClick="activeAdmin"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/power_hint_text"
            style="@style/setup_context_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/setupone_power_off" />

        <ImageView
            android:id="@+id/power_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/switch_off_normal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView style="@style/image_start_online_style" />

        <ImageView style="@style/image_start_offline_style" />

        <ImageView style="@style/image_start_offline_style" />

        <ImageView style="@style/image_start_offline_style" />
    </LinearLayout>

</RelativeLayout>