<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white" >

    <TextView
        android:id="@+id/setuptwo_title"
        style="@style/setup_title_style"
        android:text="@string/setuptwo_title" >
    </TextView>

    <TextView
        android:id="@+id/on_line"
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:layout_below="@id/setuptwo_title"
        android:background="@android:color/darker_gray" >
    </TextView>

    <TextView
        android:id="@+id/setuptwo_context_hint"
        style="@style/setup_context_style"
        android:layout_below="@id/on_line"
        android:layout_marginTop="10dip"
        android:text="@string/setuptwo_context_hint" />

    <LinearLayout
        android:id="@+id/layout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/setuptwo_context_hint"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip"
        android:onClick="boundSim"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/bound_sim_text"
            style="@style/setup_context_style"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|center_vertical"
            android:text="@string/setuptwo_text" />

        <ImageView
            android:id="@+id/sim_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:src="@drawable/switch_off_normal" />
    </LinearLayout>

    <TextView
        android:id="@+id/setuptwo_text2"
        style="@style/setup_context_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout1"
        android:layout_marginTop="15dip"
        android:text="@string/setuptwo_text2" />

    <com.faker.mobilesafe.view.ui.ClearEditText
        android:id="@+id/safe_number_edit"
        style="@style/clearedit_text_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/setuptwo_text2"
        android:layout_margin="5dip"
        android:hint="@string/setuptwo_edit_hint"
        android:inputType="phone|number" />

    <Button
        android:id="@+id/select_contact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/safe_number_edit"
        android:layout_alignRight="@id/safe_number_edit"
        android:layout_below="@id/safe_number_edit"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:onClick="selectContact"
        android:background="@drawable/login_button_bg"
        android:text="@string/setuptwo_button_text"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <ImageView style="@style/image_start_offline_style" />

        <ImageView style="@style/image_start_online_style" />

        <ImageView style="@style/image_start_offline_style" />

        <ImageView style="@style/image_start_offline_style" />
    </LinearLayout>

</RelativeLayout>