<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/set_color"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="@drawable/header_bg" >

        <Button
            android:layout_width="50dip"
            android:layout_height="30dip"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:background="@drawable/back_btn_selector"
            android:gravity="center"
            android:onClick="onBack"
            android:text="返回"
            android:textColor="@color/dialog_text"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/header_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginLeft="60dip"
            android:text="@string/hightools_title"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </RelativeLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_marginTop="3.0dip"
        android:background="@drawable/shape_bg"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dip"
            android:onClick="addIp"
            android:layout_marginTop="2.0dip" >

            <TextView
                style="@style/hightools_item_text_style"
                android:text="@string/hightools_addip" />

            <ImageView
                style="@style/hightools_item_intoicon_style"
                android:scaleX="0.6"
                android:scaleY="0.6" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/set_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:onClick="phone_query"
            android:layout_height="40dip" >

            <TextView
                style="@style/hightools_item_text_style"
                android:text="@string/hightools_query_sourcenum" />

            <ImageView
                style="@style/hightools_item_intoicon_style"
                android:scaleX="0.6"
                android:scaleY="0.6" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/set_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:onClick="common_number"
            android:layout_height="40dip" >

            <TextView
                style="@style/hightools_item_text_style"
                android:text="@string/hightools_number_usual" />

            <ImageView
                style="@style/hightools_item_intoicon_style"
                android:scaleX="0.6"
                android:scaleY="0.6" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/set_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dip" >

            <TextView
                style="@style/hightools_item_text_style"
                android:text="@string/hightools_message_backup" />

            <ImageView
                style="@style/hightools_item_intoicon_style"
                android:scaleX="0.6"
                android:scaleY="0.6" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/set_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dip" >

            <TextView
                style="@style/hightools_item_text_style"
                android:text="@string/hightools_message_restore" />

            <ImageView
                style="@style/hightools_item_intoicon_style"
                android:scaleX="0.6"
                android:scaleY="0.6" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dip"
            android:background="@color/set_color" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:onClick="lock_pattern"
            android:layout_height="40dip" >

            <TextView
                style="@style/hightools_item_text_style"
                android:text="@string/hightools_app_lock" />

            <ImageView
                style="@style/hightools_item_intoicon_style"
                android:scaleX="0.6"
                android:scaleY="0.6" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>