<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:background="@color/backgroundcolor"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <FrameLayout
        android:id="@android:id/tabcontent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/toolbar_height" >
    </FrameLayout>

    <TabWidget
        android:id="@android:id/tabs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" >
    </TabWidget>

    <RadioGroup
        android:id="@+id/radio_group"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_gravity="bottom"
        android:background="@drawable/tab_btn_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/radio_button0"
            style="@style/communicate_tab_bottom"
            android:checked="true"
            android:drawableTop="@drawable/intercept_calltab_bg"
            android:text="@string/communicate_call_history" />
        <RadioButton
            android:id="@+id/radio_button1"
            style="@style/communicate_tab_bottom"
            android:drawableTop="@drawable/intercept_messagetab_bg"
            android:text="@string/communicate_message_history" />
        <RadioButton
            android:id="@+id/radio_button2"
            style="@style/communicate_tab_bottom"
            android:drawableTop="@drawable/intercept_blacknumetab_bg"
            android:text="@string/communicate_blacknum_history" />
    </RadioGroup>

</TabHost>